--- a/public/style.css
+++ b/public/style.css
@@ -1,32 +1,10 @@
 body {
-	font-family: 'Roboto', sans-serif;
-	font-size: 16px;
-	color: #222;
-	background-color: #FaFaFa;
-	text-align: center;
-	line-height: 1.4em;
+  font-family: Arial, sans-serif;
+  margin: 40px;
+  background-color: #f8f8f8;
+  color: #333;
 }
 
-.container {
-	padding: 0;
-	margin-top: 40px;
-}
-
-h3 {
-  margin-top: 30px;
-}
-
-.footer {
-	margin-top: 40px;
-}
-
-code {
-  font-family: monospace;
-  padding: 2px;
-  color: black;
-  background-color: #fff;
-}
-
-a {
-	color: #2574A9;
+h1 {
+  color: #4CAF50;
 }
